crates/wasm-core/tests/snapshots/plan_snapshots__mutation_emits_event_hook.snap
---
source: crates/wasm-core/tests/plan_snapshots.rs
assertion_line: 341
expression: plan
---
{
  "kind": "mutation",
  "version": 1,
  "transaction": true,
  "statements": [
    {
      "alias": "insert_author",
      "sql": "WITH \"ins\" AS (INSERT INTO \"public\".\"author\" (\"name\") VALUES (('Bob')::\"text\") RETURNING *) SELECT json_build_object('affected_rows', (SELECT count(*) FROM \"ins\")) AS root",
      "params": []
    }
  ],
  "hooks": [
    {
      "phase": "post_commit",
      "alias": "insert_author",
      "trigger": "on_author_change",
      "schema": "public",
      "table": "author",
      "op": "INSERT"
    }
  ],
  "response": [
    {
      "kind": "source_field",
      "key": "insert_author"
    }
  ],
  "error_map": {
    "23502": "constraint-violation:Not-NULL violation. ",
    "23503": "constraint-violation:Foreign key violation. ",
    "23505": "constraint-violation:Uniqueness violation. ",
    "23514": "permission-error-from-payload",
    "default": "data-exception"
  }
}
