crates/wasm-core/tests/snapshots/plan_snapshots__permission_error_plan_v1.snap
---
source: crates/wasm-core/tests/plan_snapshots.rs
expression: plan
---
{
  "kind": "error",
  "version": 1,
  "code": "validation-failed",
  "path": "$.selectionSet.article",
  "message": "field 'article' not found in type: 'query_root'"
}
