crates/wasm-core/tests/snapshots/plan_snapshots__query_plan_v1_sqlite.snap
---
source: crates/wasm-core/tests/plan_snapshots.rs
expression: plan
---
{
  "kind": "query",
  "version": 1,
  "transaction": false,
  "statements": [
    {
      "alias": "data",
      "sql": "SELECT json_object('article', (SELECT coalesce(json_group_array(json(\"_t1\".j)), json_array()) FROM (SELECT json_object('id', \"_t0\".\"id\", 'title', \"_t0\".\"title\") AS j FROM \"public\".\"article\" AS \"_t0\" LIMIT 100) AS \"_t1\")) AS root",
      "params": []
    }
  ],
  "hooks": [],
  "response": [
    {
      "kind": "source_field",
      "key": "article"
    }
  ],
  "error_map": {
    "23502": "constraint-violation:Not-NULL violation. ",
    "23503": "constraint-violation:Foreign key violation. ",
    "23505": "constraint-violation:Uniqueness violation. ",
    "23514": "permission-error-from-payload",
    "default": "data-exception"
  }
}
